--- a/pages/projects/trofi.mdx
+++ b/pages/projects/trofi.mdx
@@ -4,7 +4,7 @@ import { Carousel } from "antd";
 
 ![cover img](/images/projects/trofi/banner.png)
 
-[Trofi](https://trofi.app) was a startup that my friends and I ran from April 2020 to October 2020. The goal was to explore the world of food distribution, and to see if we could make some groundbreaking changes in the area. Trofi was made as part of the first and second batch of the Mozilla Builders MVP Lab.
+[Trofi](https://trofi-app.vercel.app/) was a startup that my friends and I ran from April 2020 to October 2020. The goal was to explore the world of food distribution, and to see if we could make some groundbreaking changes in the area. Trofi was made as part of the first and second batch of the Mozilla Builders MVP Lab.
 
 Looking back, it has definitely been a wild ride turning a hackathon idea to an incorporated company launch. Though the startup ultimately shut down, I'm glad I learned a ton about running a business and navigating the produce industry. I'll be sharing my experiences and takeaways, which can hopefully be of some help to you if you're intersted in these areas.
 
