--- a/pages/blog/2022-03-02-school.mdx
+++ b/pages/blog/2022-03-02-school.mdx
@@ -21,7 +21,7 @@ I took a leave from school because I was okay about coming back to school if it 
 
 There are a lot of stories about people dropping out of college to do startups. The opposite pathway seems quite a bit less common, partly because they don't make good stories. Me coming back to school isn't a meticulously planned manifestation. Rather, it's a reckoning with what I really value in life. I want to come back for two reasons:
 
-1. Learning: The more I build, the more I realize how little I know. Sure, I can naturally pick up on practical skills and experience, but unless I intentionally focus on learning and intellectual growth, I might end up spending years making random saas webapps I don't care about, without questioning my values, beliefs, and motivations. College offers drop-in lectures, research opportunities, and easily accessible professors; the perfect place learn far and deep.
+1. Learning: A year in industry made me realize that the focus is almost always on practicality. When I'm building, I can naturally pick up on skills and experience, but unless I intentionally focus on learning and intellectual growth, I might end up spending years making random saas webapps that I don't care about, without getting none the wiser. I still want to learn the fundamentals out of genuine curiosity - even if it isn't immediately applicable. College offers drop-in lectures, research opportunities, and easily accessible professors; the perfect place learn far and deep.
 
 2. Friendships: I've been lucky to achieve a level of success I would never have dreamed of, yet I feel lonelier and emptier than ever. Since high school I have always prioritized work over relationships, but now I've come to a realization that my all-in approach to work comes at a great cost, and that cost is the intimate, lifelong relationships that give so much warmth and meaning to life. After college, it's hard to come by real friends who genuinely like you as a person instead of for convenience or benefit, and the activation energy to meet people is much higher. I'd like to use the opportunity to learn how to be compassionate and build relationships.
 
