--- a/pages/projects/noisy.mdx
+++ b/pages/projects/noisy.mdx
@@ -40,7 +40,7 @@ My big takeaway from this project is that music generation has now matured to a 
 
 Github: https://github.com/JonathanXu1/noisy-bot
 
-## Promo materials
+## Promo material
 
 <Carousel autoplay>
   <img src="/images/projects/noisy/description1.png" />
