--- a/pages/projects/echo.mdx
+++ b/pages/projects/echo.mdx
@@ -10,6 +10,6 @@ There's a lot of talk within the spaced repetition space about the awesomeness o
 
 Intrigued, I tried my hands on [Anki](https://apps.ankiweb.net/), the flagship spaced reptition app. As a newcomer, I found the UI to be extremely clunky and confusing. Regardless, it looked like it came from Windows XP.
 
-So I, along with my spaced repetition fanatic friend Kunal, built a React Native app that's simple, easy to use, and pretty. It's called [Echo Cards](https://echocards.co/).
+So I, along with my spaced repetition fanatic friend Kunal, built a React Native app that's simple, easy to use, and pretty. It's called [Echo Cards](https://echocards.vercel.app/).
 
 ---
