adding to listing

--- a/pages/blog/2022-09-11-magic.mdx
+++ b/pages/blog/2022-09-11-magic.mdx
@@ -1,4 +1,13 @@
+export const metadata = {
+  title: "The magic in the air",
+  url: "2022-09-11-magic",
+  date: "2022-09-11",
+  length: 6,
+};
+
 # The magic in the air
+
+#### 9/11/2022
 
 All my life, I've been subconciously searching for a group of people in which I felt a true sense of belonging. Belonging not in the sense of being formally recognized and accepted, but rather that sense of comradery when someone cares about the same things for the same reasons. I felt starved of that feeling of being on the same wavelength as others, of finding an equal in others.
 
