--- a/pages/blog/stanford.mdx
+++ b/pages/blog/stanford.mdx
@@ -1,3 +1,5 @@
+import { Timeline } from "antd";
+
 export const metadata = {
   title: "Undercover @ Stanford",
   url: "stanford",
@@ -11,39 +13,59 @@ I want to spend this fall exclusively on learning strong foundations and explori
 
 There isn't much of a plan other than to fly down to Stanford and figure things out. This is a pretty crazy idea and seems kinda daunting, so I'll be journaling my time here as a way to reflect and organize.
 
-## 10/2/2022
+---
+
+<Timeline>
+<Timeline.Item>
+
+**10/2/2022**
 
 - Holy jeez time flies - the past 5 days have been a flurry of crazy busyness. Finally had a day of ~relative calm
 - Spent a chunk of the day upgrading Incepto's bike collection: bought a new bike, unlocked an e-scooter, and set up the house's Notion
 - Mostly errands - editing my POV videos, taxes, moving rooms
 
-## 10/1/2022
+</Timeline.Item>
+<Timeline.Item>
+
+**10/1/2022**
 
 - Tuned in to the Neo demo day - lots of cool companies, mostly in fintech and b2b saas though. This year they made the event a lot more exclusive so I wasn't able to attend in person
 - Met David Anyaeche by Brian's recommendation. I'm surprised by the level of parallelism in our personal pathways and thought process! Lovely person, would love to hang out more
 - Crashed Stanford's Farm day and friends with a few transfer students who also live in Kimball
 - Played an absolute banger game of poker with some new Stanford friends in Burbank
 
-## 9/30/2022
+</Timeline.Item>
+<Timeline.Item>
+
+**9/30/2022**
 
 - My scariest class auditing experience by far: sat in The Dualist - a discussion group of 8 people moderated by 3 masters students. Really thought-provoking discussions on ethics/meta-ethics, philosophy of law, American identity, set theory
 - Joined my first lab meeting! We're gonna be working on projects relating to child and maternal health, efficient building/car counts, compression, mapping population trends, and cropland identification
 - Met up with Jacob, Francisco, and then Pheobe for dinner
 - The first campus party would be happening tonight - joined in for the 'nomad' theme of partying at multiple houses/greens. Kinda blown away the social life of the campus vs Waterloo. Also made a friends with a group of frosh!
 
-## 9/29/2022
+</Timeline.Item>
+<Timeline.Item>
+
+**9/29/2022**
 
 - Audited Classics 40: The History of Ancient Greek Philosophy, and CS248B: Animation and Simulation in Comptuer Graphics
 - Said hi to Sigil and visited Neo Genesis for the first time - this mansion is literally 10x bigger and fancier than any group house I've been in
 
-## 9/28/2022
+</Timeline.Item>
+<Timeline.Item>
+
+**9/28/2022**
 
 - Audited Humcore 112: Great book, big ideas in Greek Philosophy. I might actually stick with this one - I love the approach to analyze history from the lens of a storyteller
 - Audited STATS 214: ML Theory. Proofs and maths beyond my scope of understanding. This is good motivation for me to dive deeper on the maths behind ML.
 - Met with my lab supervisor for the first time. Excited to start working at Sustain lab soon!
 - Caught up with Stephanie, my old friend from HF0 Taiwan! Funny to see how transformative the experience was for us in hindsight.
 
-## 9/27/2022
+</Timeline.Item>
+<Timeline.Item>
+
+**9/27/2022**
 
 - Audited CS 148: Intro to Computer graphics. Fun prof and interesting introduction to rendering.
 - Audited CS 248B: Graphics and simulation. Much more interesting stuff here, covering spline transforms, fluid/cloth/smoke simulation, modeling humans, deep learning, reinforcement learning, 2d and 3d rigid and soft bodies. Will be covering new research papers too.
@@ -52,7 +74,10 @@ There isn't much of a plan other than to fly down to Stanford and figure things 
 - Logistics to meet with my supervisor Chenlin and lab director Stefano.
 - Met an old friend Raymond
 
-## 9/26/2022
+</Timeline.Item>
+<Timeline.Item>
+
+**9/26/2022**
 
 - It took me 40 minutes to walk to campus. I'll need to get a bike somehow.
 - Sat in PSYCH 1: introduction to psychology. It blew me away - the quality of the lecture was off the charts. Jamil Zaki is a super engaging speaker and I could tell that a lot of thought and effort was put into the course content.
@@ -66,8 +91,16 @@ There isn't much of a plan other than to fly down to Stanford and figure things 
 - Checked out a Jazz sesh at COHO. There's actually some professional-grade talent there!
 - Turns out Pheobe and Jennifer are here too! Set up a group chat for undercover auditers @ Stanford
 
-## 9/25/2022
+</Timeline.Item>
+<Timeline.Item>
+
+**9/25/2022**
 
 - Woke up early today to hike Angel Island, which was actually a lot steeper and taller than I imagined
 - Rushed back to jam on some music with a new friend, then ran to get tacos at The Commons. It was bittersweet as I said goodbye to some old friends before I headed to Stanford.
 - Took the late Caltrain to Menlo Park and moved in to Incepto. I'm truly exhausted, but excited for first day of classes tomorrow.
+
+</Timeline.Item>
+</Timeline>
+
+---
