--- a/pages/blog/stanford.mdx
+++ b/pages/blog/stanford.mdx
@@ -16,6 +16,65 @@ There isn't much of a plan other than to fly down to Stanford and figure things 
 ---
 
 <Timeline>
+
+<Timeline.Item>
+
+**10/9/2022**
+
+- Went on a lovely group trip to Lake Tahoe with my good friends at Solaris. Did lots of hiking and chatting. There was a no phone policy so it was a very mindful and unproductive weekend.
+
+</Timeline.Item>
+
+<Timeline.Item>
+
+**10/7/2022**
+
+- The Dualist: Exploring the difference between the general skeptic vs the climate change skeptic
+- Presented our project at the weekly Sustain Lab meeting. Was kinda nerve-wracking since I still don't have access to the cluster, and we only got access to some training data the day before
+
+</Timeline.Item>
+
+<Timeline.Item>
+
+**10/6/2022**
+
+- My good friend Daekun landed yesterday! We're now exploring campus and auditing courses together, excited!
+- Graphics and Simulation class: resolving particle collisions using various contact models and proximity queries using SDFs
+- Met 1-on-1 with my lab partner Amna. We're gonna be taking lead on the project to map farmland by detecting harvest piles in sat imagery
+- Went to the fall term club fair - super impressed by the diversity and engagement of the student body here (feels like 3x larger than Waterloo club fair). Got two free books (The Alignment Problem, The Precipice) and some funny Rebpulican stickers
+
+</Timeline.Item>
+
+<Timeline.Item>
+
+**10/5/2022**
+
+- Audited ARTHIST 1B: How to Look at Art and Why. Prof. Nemerov is one of those teachers that show you new ways of looking at aesthetics and the world at large. We looked at art on the theme of The Calling.
+- Audited ENGL 190: Poetry and Poetics. One of my favorite classes of all time. Dr. Hofmann taught showed us some poems that are beautiful examples of imagery.
+- Meeting my lab team and setting things up so I can start working
+
+</Timeline.Item>
+
+<Timeline.Item>
+
+**10/4/2022**
+
+- Graphics class: First introduction to topics in ordinary differential equations
+- Started auditing a highly recommended course: EDUC 193A. It seems quite promising - lots of thoughtful ideas on how to be empathetic and helpful.
+- Met Luke Ren - super cool guy persuing double masters while raising his series A. Kinda blown away by the amount of cool people I randomly bump into here.
+
+</Timeline.Item>
+
+<Timeline.Item>
+
+**10/3/2022**
+
+- Holy jeez time flies - the past 5 days have been a flurry of crazy busyness. Finally had a day of ~relative calm
+- Spent a chunk of the day upgrading Incepto's bike collection: bought a new bike, unlocked an e-scooter, and set up the house's Notion
+- Mostly errands - editing my POV videos, taxes, moving rooms
+
+</Timeline.Item>
+
 <Timeline.Item>
 
 **10/2/2022**
@@ -57,7 +116,7 @@ There isn't much of a plan other than to fly down to Stanford and figure things 
 
 **9/28/2022**
 
-- Audited Humcore 112: Great book, big ideas in Greek Philosophy. I might actually stick with this one - I love the approach to analyze history from the lens of a storyteller
+- Audited Humcore 112: Great books, big ideas in Greek Philosophy. I might actually stick with this one - I love the approach to analyze history from the lens of a storyteller
 - Audited STATS 214: ML Theory. Proofs and maths beyond my scope of understanding. This is good motivation for me to dive deeper on the maths behind ML.
 - Met with my lab supervisor for the first time. Excited to start working at Sustain lab soon!
 - Caught up with Stephanie, my old friend from HF0 Taiwan! Funny to see how transformative the experience was for us in hindsight.
