--- a/pages/blog/stanford.mdx
+++ b/pages/blog/stanford.mdx
@@ -19,6 +19,18 @@ There isn't much of a plan other than to fly down to Stanford and figure things 
 
 <Timeline.Item>
 
+**10/10/2022**
+
+- How to look at art: Exploring the theme of stars in artwork. Our relationship to the cosomos, theology and life and the symbolism of the tiny white speck
+- Chatted with Gabe, who runs Stanford AI Alignment. Am excited to see if we can get some resources to start some similar initiative @ Waterloo
+- Poetry and poetics: Metres and rhythm in poetry. Read *To a Poor Old Woman* by William Carlos Williams
+- Sat in a politics class to discover that Hillary Clinton was doing an interview on Zoom
+- Finished up the CNN Coursera course
+
+</Timeline.Item>
+
+<Timeline.Item>
+
 **10/9/2022**
 
 - Went on a lovely group trip to Lake Tahoe with my good friends at Solaris. Did lots of hiking and chatting. There was a no phone policy so it was a very mindful and unproductive weekend.
