more undercover posts

--- a/pages/blog/stanford.mdx
+++ b/pages/blog/stanford.mdx
@@ -3,7 +3,7 @@ import { Timeline } from "antd";
 export const metadata = {
   title: "Undercover @ Stanford",
   url: "stanford",
-  date: "2022-10-02",
+  date: "2022-10-24",
   length: 10,
 };
 
@@ -16,6 +16,48 @@ There isn't much of a plan other than to fly down to Stanford and figure things 
 ---
 
 <Timeline>
+
+<Timeline.Item>
+
+**10/14/2022**
+
+- Attended The Dualist: Read philosophy paper *Mental Ballistics or the Involuntariness of Spontaneity*. Essentially says that we have autonomy in deciding when we make space for thought, the actual contents of what we think are out of our control.
+- Lab meeting #2: Syncing up to hear about the progress of other teams working on BMI analysis, brick furnace detection.
+- Talking with lab supervisor about my harvest piles project: we realize that our satellite imagery resolution is too low to have enough training data.
+
+</Timeline.Item>
+
+<Timeline.Item>
+
+**10/13/2022**
+
+- Lots of errands related to flights, visas, etc
+- Week 1 of recurrent neural network Coursera course
+- Went to a dinner with a bunch of Nvidia engineers in Menlo Park. Almost all of them were from Waterloo - we're everywhere!
+- Deep conversations with Incepto housemates about the goals one should persue in life, and the balance between flow and intentionality
+
+</Timeline.Item>
+
+<Timeline.Item>
+
+**10/12/2022**
+
+- How to look at art: Feminine figures, melancholy and melodramatic aspects of mundanity
+- Lunch with Cole, a friend we met at XR club
+- Poetry and poetics: Deeper dive into sonic relations: rhyme, stanzas and structure. Beauty in constraints. Read Upon His Departure Hence by Robert Herrick, This Be The Verse by Philip Larkin, Supernatural Love by Gertrud Schnackenburg, Mushmouf's Maybe-Crown by Phillip B. Williams
+- Joined the Stanford Existential Risks Initiative dinner. A group of ~10 people eating together talking about AI safety and the process of convincing top researchers in the field to think about it
+- Checked out the Taiwanese Student Society kickoff. A sizeable group of ~30 kind folk, doing a lot more thoughtful stuff than CSA at Waterloo lol
+
+</Timeline.Item>
+
+<Timeline.Item>
+
+**10/11/2022**
+
+- Intermediate computer graphics: Collision detection methods, bounding volumes, testing bounding volumes, broad phase culling
+- Chatted with president of Stanford EA. An interesting group of folk that seems to spark controversy in their methodology of deciding what is the best allocation of resources/time, but definitely seems well intentioned
+
+</Timeline.Item>
 
 <Timeline.Item>
 
