--- a/pages/projects/noisy.mdx
+++ b/pages/projects/noisy.mdx
@@ -7,7 +7,7 @@ import { Carousel } from "antd";
 ![cover img](/images/projects/noisy/banner.png)
 _The landing page. I'm pretty happy with how the dark cyberpunk vibe turned out!_
 
-[Noisy.live](https://www.noisy.live/) is a bot that uses AI to generate and play music on the fly. It supports 17+ genres, and exists as a [Discord bot](https://discord.com/oauth2/authorize?client_id=746757926735052931&scope=bot&permissions=3296256) and a [web player](https://www.noisy.live/player). This idea was spawned after I was playing around with really exciting music generation models from OpenAI [Musenet](https://openai.com/blog/musenet/l) and Google [Magenta](https://magenta.tensorflow.org/). My goal is to help people share some cool musical experiences, so I'll keep the project running for free as long as I can.
+[Noisy](https://noisy.vercel.app/) is a bot that uses AI to generate and play music on the fly. It supports 17+ genres, and exists as a [Discord bot](https://discord.com/oauth2/authorize?client_id=746757926735052931&scope=bot&permissions=3296256) and a [web player](https://noisy.vercel.app/player). This idea was spawned after I was playing around with really exciting music generation models from OpenAI [Musenet](https://openai.com/blog/musenet/l) and Google [Magenta](https://magenta.tensorflow.org/). My goal is to help people share some cool musical experiences, so I'll keep the project running for free as long as I can.
 
 When I started this project, I told myself that this time, I _will_ complete this thing. I set a reasonable scope, and had a simple goal. Interestingly, the majority of the project was built out during my time at a communal house in New Mexico, when there were maximum distractions. I'm pretty happy that things worked out and I got to make something to share with real users.
 
@@ -18,7 +18,7 @@ If the site is still up, you can play with the web player embed below.
 <div style={{ position: "relative", paddingBottom: "750px", height: 0 }}>
   <iframe
     frameborder="0"
-    src="https://noisy.live/player"
+    src="https://noisy.vercel.app/player"
     style={{
       position: "absolute",
       top: 0,
