adding to journal

--- a/pages/blog/stanford.mdx
+++ b/pages/blog/stanford.mdx
@@ -3,8 +3,8 @@ import { Timeline } from "antd";
 export const metadata = {
   title: "Undercover @ Stanford",
   url: "stanford",
-  date: "2022-10-24",
-  length: 10,
+  date: "2022-10-19",
+  length: 15,
 };
 
 # Undercover @ Stanford
@@ -13,9 +13,65 @@ I want to spend this fall exclusively on learning strong foundations and explori
 
 There isn't much of a plan other than to fly down to Stanford and figure things out. This is a pretty crazy idea and seems kinda daunting, so I'll be journaling my time here as a way to reflect and organize.
 
+Update: I had to leave a lot earlier than anticipated, but this journaling process has definitely helped me make the most of it while I was there. This was fun, to more adventures in the future!
+
 ---
 
 <Timeline>
+
+<Timeline.Item>
+
+**10/19/2022**
+
+- Stayed up till 3:30am to catch my morning flight to Toronto. I guess this is it.
+- I can't say that I'm not bummed that things didn't work out as planned: I took a month setting up and settling down, anticipating an awesome 4 months of learning at Stanford, making deep friendships, and getting a lot done in my research project. As always, life throws an unexpected hurdle at me and I had to fly out immediately to avoid visa issues.
+- One silver lining is that I have no regrets with how I spent the past month. I got so much done and broadened my perspectives a lot, mainly because I cherished each day here as if it could have been my last. Lots of inspiring experiences that expanded my understanding of the elements that constitute good teaching, community, and research.
+- Actually there are two silver linings - I'll now be able to share some precious quality time with my family, and get a lot more work done now that there aren't any in-person distractions in the way. Oh well, it's been fun!
+
+</Timeline.Item>
+
+<Timeline.Item>
+
+**10/18/2022**
+
+- Today was a very intentional day. It might be my last day in Stanford for the next while. I've decided to fly out of the country to avoid any visa issues, and it hurts to leave just as things are coming together.
+- Had a call with our project coordinator to figure out next steps by our presentation on Friday
+- Peer counseling skills: This week's class was pretty uneventful, mostly slides about problem solving while doing peer counseling.
+- Packing for my flight tomorrow. Last minute angst with deciding to leave the US, and a lot of self-doubt, sadness, confusion.
+
+</Timeline.Item>
+
+<Timeline.Item>
+
+**10/17/2022**
+
+- How to look at art: Themes of melancholy in mundanity and the role of feminine figures over time. I liked *New York Movie* by Edward Hopper
+- Lunch with a new friend who is interested in XR
+- Poetry and poetics: Learning about sonnet form: Italian, English, Spenserian sonnets
+- Writing some scripts to split our labelled dataset of 1024x1024 images into tiles of size 32, 64, and 244
+
+</Timeline.Item>
+
+<Timeline.Item>
+
+**10/16/2022**
+
+- Had a coffee with Jacklyn. Feels great to meet another friend from back home. Chatted about our personal journeys and the age old question of whether to drop out or not.
+- Joined Yuehan for lunch and a co-work session. Finally met Sam, the sleep man.
+- Learning about SVDs and low rank matrix approximations.
+- Celebrated Vlad's birthday at Solaris. Said my goodbyes to some friends that I might not see in a while.
+
+</Timeline.Item>
+
+<Timeline.Item>
+
+**10/15/2022**
+
+- Discovered X House when I attended their ball pit christening. If you're ever there, make sure to check out their altar to tech billionaires upstairs. There's a lot of cool folk in South Bay - good to keep in mind if I want to come here for deep work.
+- Did some coursera lessons on recurrent neural networks.
+- Travelled to SF to visit some old friends.
+
+</Timeline.Item>
 
 <Timeline.Item>
 
@@ -24,6 +80,8 @@ There isn't much of a plan other than to fly down to Stanford and figure things 
 - Attended The Dualist: Read philosophy paper *Mental Ballistics or the Involuntariness of Spontaneity*. Essentially says that we have autonomy in deciding when we make space for thought, the actual contents of what we think are out of our control.
 - Lab meeting #2: Syncing up to hear about the progress of other teams working on BMI analysis, brick furnace detection.
 - Talking with lab supervisor about my harvest piles project: we realize that our satellite imagery resolution is too low to have enough training data.
+- Joined a student-run class: Intro to AI alignment. A very key topic in a field I'm learning more about - excited to learn about my true unknowns!
+- Had an Incepto house dinner. Really warm family vibes - I wish to recreate this in communities I join.
 
 </Timeline.Item>
 
