--- a/pages/blog/2022-10-30-schools.mdx
+++ b/pages/blog/2022-10-30-schools.mdx
@@ -1,4 +1,15 @@
-When I was at Stanford doing research for Sustain Lab, my experience at the elite private college was a stark contrast from my time at Waterloo. I was broadly aware of some differences, but this past month really opened my eyes to the degree and extent of the contrast in the student experience. The purpose of this post is to share my most striking observations with my fellow Waterloo friends and to hopefully spark some discussion about the topic.
+export const metadata = {
+  title: "The Ivory Tower and the Concrete Basement: Personal observations about Stanford and Waterloo",
+  url: "2022-11-05-stanford-waterloo",
+  date: "2022-11-05",
+  length: 10,
+};
+
+# The Ivory Tower and the Concrete Basement: Personal observations about Stanford and Waterloo
+
+#### 11/5/2022
+
+When I was [at Stanford](/blog/2020-03-02-school) doing research for Sustain Lab, my experience at the elite private college was a stark contrast from my time at Waterloo. I was broadly aware of some differences when walking through [Stanford](https://youtu.be/jCWwxiPxsEw) and [Waterloo](https://youtu.be/SPk14LZFT1o), but this past month really opened my eyes to nuance of each school. The purpose of this post is to share my most striking observations with my fellow Waterloo friends and to hopefully spark some discussion about the topic.
 
 ### Grades
 Private institutions are not a meritocracy. You get accepted for a combination of priveledge, luck, and hard work. Admissions mostly care more about your essays than your high school grades. Once you're in, it's really hard to fail out. I was sitting in the CS 148 lecture, and the difference was stark. The professor was very vocal in saying that he understood the pressures of the student schedule, and straight up offered to accept the final project months after the term ended. Students say that Stanford coddles you - if you need an accomodation it will be made for you. I know a friend who actually got the school to make a unique degree just for him - he used it to graduate early with his bio + cs course credits.
@@ -23,8 +34,8 @@ The way an institution treats you reveals the type of person that you are groome
 
 ### Closing thoughts
 
-I'm really glad I got to experience these two schools for myself! They serve as good foils for each other, bringing to light a lot of areas that my conventional education has been quite good and bad at. I appreciate the green field, intellectually nourishing and exploratory environment at Stanford but also value the grounded, egalitarian and pragmatic environment at Waterloo. 
+I'm really glad I got to experience these two schools for myself! They serve as good foils for each other, bringing to light a lot of areas that my conventional education has been quite good and bad at. I appreciate the green field, intellectually nourishing and exploratory environment at Stanford but also value the grounded, egalitarian and pragmatic environment at Waterloo. I make no claims about what higher education is like on the whole, but Waterloo and Stanford are good examples of the two extremes of the spectrum.
 
-For their own intents and purposes, the schools do well at what they were made for. High schoool me wanted a recognizable diploma and good work experience at a very affordable price, and Waterloo was perfect for that. As I'm now gravitating towards a more idealistic persuit of learning and growth, I think it makes sense to audit Stanford's courses as a hack to get a world-class education for free.
+For their own intents and purposes, the schools do well at what they were made for. High schoool me wanted a recognizable diploma and good work experience at a very affordable price, and Waterloo was perfect for that. As I'm now gravitating towards a more idealistic persuit of learning and growth, I think it makes sense to [audit](https://onedrive.live.com/redir?resid=659033F9B5551049%211470&authkey=%21ADLuETSYPd-pr-o&page=View&wd=target%28Stanford%2FCS248.one%7C72e74e63-a796-4271-9779-b7d2e3212a5d%2FCS248%7Cebdc4805-fc6c-4621-a4d4-2e1d0471276e%2F%29&wdorigin=NavigationUrl) Stanford's [courses](https://explorecourses.stanford.edu/) as a hack to get a world-class education for free.
 
 I wouldn't want to wring my hands too much over which college I should have gone to - though college years are quite formative I think it is more important to develop a value system and identity that is resilient to whichever environment or institution I find myself in. 
