adding images, fixing links

--- a/pages/blog/2022-10-19-stanford.mdx
+++ b/pages/blog/2022-10-19-stanford.mdx
@@ -2,7 +2,7 @@ import { Timeline } from "antd";
 
 export const metadata = {
   title: "Undercover @ Stanford",
-  url: "stanford",
+  url: "2022-10-19-stanford",
   date: "2022-10-19",
   length: 15,
 };
@@ -14,6 +14,8 @@ I want to spend this fall exclusively on learning strong foundations and explori
 There isn't much of a plan other than to fly down to Stanford and figure things out. This is a pretty crazy idea and seems kinda daunting, so I'll be journaling my time here as a way to reflect and organize.
 
 Update: I had to leave a lot earlier than anticipated, but this journaling process has definitely helped me make the most of it while I was there. This was fun, to more adventures in the future!
+
+Course notes are recorded [here](https://1drv.ms/u/s!AkkQVbX5M5Bliz4y7hE0mD3fqa_q)
 
 ---
 
