--- a/pages/blog/2022-11-05-stanford-waterloo.mdx
+++ b/pages/blog/2022-11-05-stanford-waterloo.mdx
@@ -9,7 +9,9 @@ export const metadata = {
 
 #### 11/5/2022
 
-When I was [at Stanford](/blog/2020-03-02-school) doing research for Sustain Lab, my experience at the elite private college was a stark contrast from my time at Waterloo. I was broadly aware of some differences when walking through [Stanford](https://youtu.be/jCWwxiPxsEw) and [Waterloo](https://youtu.be/SPk14LZFT1o), but this past month really opened my eyes to nuance of each school. The purpose of this post is to share my most striking observations with my fellow Waterloo friends and to hopefully spark some discussion about the topic.
+![Image of Stanford campus](/images/2022-11-05-stanford-waterloo/stanford.jpg)
+
+When I was [at Stanford](/blog/2022-10-19-stanford) doing research for Sustain Lab, my experience at the elite private college was a stark contrast from my time at Waterloo. I was broadly aware of some differences when walking through [Stanford](https://youtu.be/jCWwxiPxsEw) and [Waterloo](https://youtu.be/SPk14LZFT1o), but this past month really opened my eyes to nuance of each school. The purpose of this post is to share my most striking observations with my fellow Waterloo friends and to hopefully spark some discussion about the topic.
 
 ### Grades
 Private institutions are not a meritocracy. You get accepted for a combination of priveledge, luck, and hard work. Admissions mostly care more about your essays than your high school grades. Once you're in, it's really hard to fail out. I was sitting in the CS 148 lecture, and the difference was stark. The professor was very vocal in saying that he understood the pressures of the student schedule, and straight up offered to accept the final project months after the term ended. Students say that Stanford coddles you - if you need an accomodation it will be made for you. I know a friend who actually got the school to make a unique degree just for him - he used it to graduate early with his bio + cs course credits.
@@ -18,7 +20,7 @@ This is unheard of in Waterloo! The system is rigid and one-dimensional - you ei
 
 ### Pragmatism
 
-The selection of courses at Stanford is truly quite amazing. There are courses for everything, including meditation, poetry, scuba diving and even a course on how to make the most out of your time at college. I get the feeling that the curriculum is catered to satisfy any intellectual curiosities that someone might have if they had plenty of time and money. My Stanford friend pointed out, for example, that many students learn German even if they don't need it, just for the fun of learning German. This makes sense - the campus does seems feel like a place for the elite send their children to to have a good time.
+The selection of courses at Stanford is truly quite amazing. There are courses for everything, including meditation, poetry, scuba diving and even a course on how to make the most out of your time at college. I get the feeling that the curriculum is catered to satisfy any intellectual curiosities that someone might have if they had plenty of time and money. My Stanford friend pointed out, for example, that many students learn German even if they don't need it, just for the fun of learning German. This makes sense - the campus does seems feel like a place for the elite to send their children to have a good time.
 
 Waterloo as we know it is mostly a convocational school. Most of the students come to this school with the goal to be work-ready when they graduate. The school's focus on the co-op program (for the uninitiated: every other term is an internship) naturally attracts a demographic where job security and financial stability are top of mind. Even with this curriculum, you can hear a common complaint about the courses that students still have to take - "this is useless, when am I gonna use this on the job?!", or "I'm only here for the co-op program". Overall, I find Waterloo to be a much more intellectually stifling place, albeit a much more grounded environment.
 
@@ -39,3 +41,5 @@ I'm really glad I got to experience these two schools for myself! They serve as 
 For their own intents and purposes, the schools do well at what they were made for. High schoool me wanted a recognizable diploma and good work experience at a very affordable price, and Waterloo was perfect for that. As I'm now gravitating towards a more idealistic persuit of learning and growth, I think it makes sense to [audit](https://onedrive.live.com/redir?resid=659033F9B5551049%211470&authkey=%21ADLuETSYPd-pr-o&page=View&wd=target%28Stanford%2FCS248.one%7C72e74e63-a796-4271-9779-b7d2e3212a5d%2FCS248%7Cebdc4805-fc6c-4621-a4d4-2e1d0471276e%2F%29&wdorigin=NavigationUrl) Stanford's [courses](https://explorecourses.stanford.edu/) as a hack to get a world-class education for free.
 
 I wouldn't want to wring my hands too much over which college I should have gone to - though college years are quite formative I think it is more important to develop a value system and identity that is resilient to whichever environment or institution I find myself in. 
+
+---
