--- a/pages/blog/2022-11-05-stanford-waterloo.mdx
+++ b/pages/blog/2022-11-05-stanford-waterloo.mdx
@@ -13,6 +13,8 @@ export const metadata = {
 
 When I was [at Stanford](/blog/2022-10-19-stanford) doing research for Sustain Lab, my experience at the elite private college was a stark contrast from my time at Waterloo. I was broadly aware of some differences when walking through [Stanford](https://youtu.be/jCWwxiPxsEw) and [Waterloo](https://youtu.be/SPk14LZFT1o), but this past month really opened my eyes to nuance of each school. The purpose of this post is to share my most striking observations with my fellow Waterloo friends and to hopefully spark some discussion about the topic.
 
+Disclaimer: My observations are limited only to the situations that I have personally been in, which is a small silver of the entire Stanford and Waterloo (CS and Engineering) experience. They make sense within this context, but I make no tautologies about the expeirence for all students in all school departments. 
+
 ### Grades
 Private institutions are not a meritocracy. You get accepted for a combination of privilege, luck, and hard work. Admissions mostly care more about your essays than your high school grades. Once you're in, it's really hard to fail out. I was sitting in the CS 148 lecture, and the difference was stark. The professor was very vocal in saying that he understood the pressures of the student schedule, and straight up offered to accept the final project months after the term ended. Students say that Stanford coddles you - if you need an accomodation it will be made for you. I know a friend who actually got the school to make a unique degree just for him - he used it to graduate early with his bio + cs course credits.
 
@@ -22,7 +24,7 @@ This is unheard of in Waterloo! The system is rigid and one-dimensional - you ei
 
 The selection of courses at Stanford is truly quite amazing. There are courses for everything, including meditation, poetry, scuba diving and even a course on how to make the most out of your time at college. I get the feeling that the curriculum is catered to satisfy any intellectual curiosities that someone might have if they had plenty of time and money. My Stanford friend pointed out, for example, that many students learn German even if they don't need it, just for the fun of learning German. This makes sense - the campus does seems feel like a place for the elite to send their children to have a good time.
 
-Waterloo as we know it is mostly a convocational school. Most of the students come to this school with the goal to be work-ready when they graduate. The school's focus on the co-op program (for the uninitiated: every other term is an internship) naturally attracts a demographic where job security and financial stability are top of mind. Even with this curriculum, you can hear a common complaint about the courses that students still have to take - "this is useless, when am I gonna use this on the job?!", or "I'm only here for the co-op program". Overall, I find Waterloo to be a much more intellectually stifling place, albeit a much more grounded environment.
+Waterloo as we know it is mostly a vocational school. Most of the students come to this school with the goal to be work-ready when they graduate. The school's focus on the co-op program (for the uninitiated: every other term is an internship) naturally attracts a demographic where job security and financial stability are top of mind. Even with this curriculum, you can hear a common complaint about the courses that students still have to take - "this is useless, when am I gonna use this on the job?!", or "I'm only here for the co-op program". Overall, I find Waterloo to be a much more intellectually stifling place, albeit a much more grounded environment.
 
 ### Teaching quality
 
@@ -44,4 +46,4 @@ I wouldn't want to wring my hands too much over which college I should have gone
 
 ---
 
-{/* Thanks to Nicholas, Vincent, and Daekun. */}
+{/* Thank you Daekun, Nicholas, Vincent. */}
