small update to blog, tracking images on lfs now

--- a/pages/blog/2020-12-31-reflections.mdx
+++ b/pages/blog/2020-12-31-reflections.mdx
@@ -24,7 +24,7 @@ Summing up the big events and milestones that happened for me this year, roughly
 - joined the Mozilla Builders spring/summer batch and tried to change the food distribution system with my friends
 - went on a few camping trips with friends
 - started my 2B school term, and moved to a communal [living house](https://school2point0.com) in New Mexico halfway through
-- lived there for two months, made a music bot and many friends and memories
+- lived there for two months, made a [music bot](/projects/noisy) and many friends and memories
 - climbed my first mountain
 - drove to San Francisco with a few of these friends
 - celebrated my first Hanukkah
