--- a/pages/blog/2021-12-31-reflection.mdx
+++ b/pages/blog/2021-12-31-reflection.mdx
@@ -15,7 +15,7 @@ export const metadata = {
 
 That feeling you get when you come home after a jam-packed weekend. A powerufl mix of contentment, exhaustion, and familiarity when you fall face first into your bed. I think that pretty much describes the essense of my entire being at the moment.
 
-Last year, I ended [my reflection](/blog/2020-12-31-reflections) with a letter of invitation for sponteneity to enter my life. Wow. It answered, and it came hard. I didn't realize the sheer amount of STUFF that can fit into a year. It feels like I've lived 5 years within the span of a year. Let's break it down to the highlights:
+Last year, I ended [my reflection](/blog/2020-12-31-reflections) with a letter of invitation for sponteneity to enter my life. Wow. It answered, loud and clear. I didn't realize the sheer amount of STUFF that can fit into a year. It feels like I've lived 5 years within the span of a year. Let's break it down to the highlights:
 
 - crawled through the sewers at Stanford University
 - snuck into abandoned barracks at Alameda air force base (hi CIA agent - hypothetically speaking of coure)
@@ -59,7 +59,7 @@ Looking at my goals from last year:
 
 For the next year, my explorations will probably shift from an external setting to an internal one. I think I've lived out of a suitcase for long enough, and I'd like to settle down for a bit to look inwards, nurture my hobbies and study my passions. It'll be a good time to recenter, meditate, and rediscover myself.
 
-Thanks to my experiment of trying (really hard) at new things, I no longer feel the need to prove my capabilities to myself. This year my goals will center around personal growth and nourishment of the mind, body, and spirit. My hypothesis is that if I do what I like doing, I will naturally find my dream career and project. Moreover, our brains work in such a way that regularity matters more than cramming hours. The key here will be to establish regular intervals of mindfulness and personal growth so I don't get caught up too much in the short term.
+Thanks to my experiment of trying (really hard) at new things, I no longer feel that I have to prove to myself I can do something. This year my goals will center around personal growth and nourishment of the mind, body, and spirit. My hypothesis is that if I do what I like doing, I will naturally find my dream career and project. Moreover, our brains work in such a way that regularity matters more than cramming hours. The key here will be to establish regular intervals of mindfulness and personal growth so I don't get caught up too much in the short term.
 
 ~Goals for this year~
 
