--- a/pages/blog/2022-06-25-povertyTODO.mdx
+++ b/pages/blog/2022-06-25-povertyTODO.mdx
@@ -6,7 +6,7 @@ A while back my friend and I were joking about how we would put thousands in cry
 
 I think a big reason for this is that convoluted representations of wealth abstract away a lot of the value of the underlying dollars, in the same way that poker chips do it in casinos. On the other hand, the process of buying something clearly represents the value of the money I spend, in the form of the good or service I'm buying.
 
-The end result of this is that I am unfazed by crazy swings in my portfolio, yet I live excessively frugally (my poverty-stricken upbringing also had a play in this), to the point where the effort put into deliberating and cutting costs ends up costing me more than if I paid a bit more. Spending more on what I actually care about, and less on vogue investments for the sake of 'security', I would have had a much better quality of life, and probably be financially the same as where I am now. My conclusion from this is that I should redefine my relationship to money, in particular:
+The end result of this is that I am unfazed by crazy swings in my portfolio, yet I live way too frugally (my poverty-stricken upbringing also had a play in this), to the point where the effort put into deliberating totally is not worth the money I save. Spending more on what I actually care about, and less on vogue investments for the sake of 'security', I would have had a much better quality of life, and probably be financially the better of than where I am now. My conclusion from this is that I should redefine my relationship to money, in particular:
 
 > Stocks and crypto are only worth what they can be sold for in cash
 > Cash is only worth something because it can be exchanged for goods and services
