publishing reflections and wrapped

--- a/pages/blog/2021-12-31-reflection.mdx
+++ b/pages/blog/2021-12-31-reflection.mdx
@@ -117,7 +117,7 @@ See you around, 2022!
 <Card
   cover={<img alt="example" src="/images/2021-12-31-reflection/kbbq.jpg" />}
 >
-  <Card.Meta description="So we caught a pound of fresh fish from our fishin trip. But we were flying out of Anaheim the next day, and our hotel room had a measley microwave. So we waited two hours to get a kbbq spot and secretly cooked our raw fish alongside the marinated meats. The server gave us weird looks since it was an all-you-can-eat." />
+  <Card.Meta description="So we caught a pound of fresh fish from our fishing trip. But we were flying out of Anaheim the next day, and our hotel room had a measley microwave. So we waited two hours to get a kbbq spot and secretly cooked our raw fish alongside the marinated meats. The server gave us weird looks since it was an all-you-can-eat." />
 </Card>
 <Card
   cover={
