--- a/pages/blog/2022-11-05-stanford-waterloo.mdx
+++ b/pages/blog/2022-11-05-stanford-waterloo.mdx
@@ -1,11 +1,11 @@
 export const metadata = {
-  title: "The Ivory Tower and the Concrete Basement: Personal observations about Stanford and Waterloo",
+  title: "The Ivory Tower and the Concrete Basement: Personal observations between Stanford and Waterloo",
   url: "2022-11-05-stanford-waterloo",
   date: "2022-11-05",
   length: 10,
 };
 
-# The Ivory Tower and the Concrete Basement: Personal observations about Stanford and Waterloo
+# The Ivory Tower and the Concrete Basement: Personal observations between Stanford and Waterloo
 
 #### 11/5/2022
 
@@ -24,6 +24,9 @@ This is unheard of in Waterloo! The system is rigid and one-dimensional - you ei
 
 The selection of courses at Stanford is truly quite amazing. There are courses for everything, including meditation, poetry, scuba diving and even a course on how to make the most out of your time at college. I get the feeling that the curriculum is catered to satisfy any intellectual curiosities that someone might have if they had plenty of time and money. My Stanford friend pointed out, for example, that many students learn German even if they don't need it, just for the fun of learning German. This makes sense - the campus does seems feel like a place for the elite to send their children to have a good time.
 
+![Image of Stanford campus](/images/2022-11-05-stanford-waterloo/slang.jpg)
+_There is a curious amount of argot at Stanford: use of exclusive words to establish some kind of pride in an inner group_
+
 Waterloo as we know it is mostly a vocational school. Most of the students come to this school with the goal to be work-ready when they graduate. The school's focus on the co-op program (for the uninitiated: every other term is an internship) naturally attracts a demographic where job security and financial stability are top of mind. Even with this curriculum, you can hear a common complaint about the courses that students still have to take - "this is useless, when am I gonna use this on the job?!", or "I'm only here for the co-op program". Overall, I find Waterloo to be a much more intellectually stifling place, albeit a much more grounded environment.
 
 ### Teaching quality
@@ -36,6 +39,8 @@ The bar at Stanford is on another level - which kind of makes sense given that y
 
 The way an institution treats you reveals the type of person that you are groomed to be. I didn't sense this dimension initially, but over time it became quite apparent that this was one of the biggest differences between the schools. Stanford is unabashedly all about creating what it calls the "leaders of tomorrow". The faculty try to cater to your needs, and constantly refer to the student audience as the best and brightest of the generation. This struck a chord with me because I am sad to see that many Cardinals internalize these pompous validations without really having done much work or leadership to deserve such titles. Students are told that they deserve the world, and are encouraged to seek resources and accomodations. Some parts of this are quite good - I was quite shocked when I saw a student raise her hand during a lecture to state that she disagreed with the claims made by the professor. This is unheard of in loo, where you are taught to know your place and not to question authority. Most people at Stanford seem to be trying to make the most of their time there - actively trying to make friends, join clubs, attend parties, and reach out to professors. The median at Waterloo seems to be trudging through the school term, counting the days until graduation or their next co-op.
 
+![Image of Stanford campus](/images/2022-11-05-stanford-waterloo/campus.jpg)
+
 ### Closing thoughts
 
 I'm really glad I got to experience these two schools for myself! They serve as good foils for each other, bringing to light a lot of areas that my conventional education has been quite good and bad at. I appreciate the ambitious, intellectually engaging and exploratory environment at Stanford but also value the grounded, egalitarian and pragmatic environment at Waterloo. I make no claims about what higher education is like on the whole, but Waterloo and Stanford are good examples of the two extremes of the spectrum.
@@ -46,4 +51,4 @@ I wouldn't want to wring my hands too much over which college I should have gone
 
 ---
 
-{/* Thank you Daekun, Nicholas, Vincent. */}
+_Thank you Daekun, Nicholas, and Vincent_
