--- a/pages/blog/2022-12-29-reflection.mdx
+++ b/pages/blog/2022-12-29-reflection.mdx
@@ -1,13 +1,16 @@
 import { Carousel, Card } from "antd";
 
 export const metadata = {
-  title: "2022 Meta Reflection",
+  title: "New Years Inflection",
   url: "2022-12-29-reflection",
   date: "2022-12-29",
   length: 5,
 };
 
-# 2022 Meta Reflection
+# New Years Inflection
+
+![cover](/images/2022-12-29-reflection/cover.jpg)
+_The backyard at Fey_
 
 Wohoo! My dear little humans, we've survived another year! Our speck of a planet spun about the sun, and rotated about its axis 365 times while doing so. And all the while we've been busy, cooking and cleaning and doing a bunch of all-hands meetings and stuff like that. Here's what I did this year...
 
@@ -17,9 +20,12 @@ How could this be a candid reflection if all I'm doing is just listing my annual
 
 As I get older, I find that my mind tends to become more set in its ways and I can fall into autopilot mode without even realizing it. Traditions like writing Christmas cards ("Wishing you and your family good health!") and listing out New Years resolutions start feeling vacuous in the comfort of routine.
 
+![ruts](/images/2022-12-29-reflection/ruts.jpg)
+_A particularly scenic walk in with Fey friends in the French countryside_
+
 I don't want to live that way - if I'm doing something, I want to experience it fully. I want to be present in the moment, and not just go through the motions. For the rest of this post, I'll be talking about a qualitative point that surprised me during my reflection. I'll jot down the measurable stats for funsies, in [another post](/blog/2022-12-29-rewind).
 
-### Inspiration
+## Inspiration
 
 Thanks to hindsight, I can tell that my level of inspiration fluctuated wildly over the year. All you have to do is look at my writing - it's easy to see when I'm passionately creating or simply pushing content from the stack of ideas in my backlog.
 
@@ -28,6 +34,9 @@ It's been so mercurial because I haven't really been self-aware about it until v
 I used to think that inspiration is something you feel when an external stimulus compels you to improve yourself. That definition might've been too broad, because it also includes feelings of insecurity.
 
 Such as when you meet someone younger than you, and learn that they are now 10x richer than you. Suddenly you feel an inadequacy that stings so much more because you can't use your youth as an excuse for not being as financially successful. "Wow I met a 13 year old who is running a $50M media empire, I'm really inspired to work harder!". That doesn't seem to be a intrinsic sort of inspiration - you are compelled to work harder so that you can patch a hole in your self-worth; the focus is entirely on your own ego.
+
+![cover](/images/2022-12-29-reflection/motive.jpg)
+_Lake Tahoe_
 
 My hunch is that perhaps inspiration stems from a wonder with the world outside ourselves. That excitement to create, to love like never before, to tread a fresh path, and trying to be fully immersed in the beauty of the present - maybe that's inspiration. 
 
@@ -42,6 +51,8 @@ Some tricks I'll try:
 - enjoy things as if it were the first time you're doing it
 
 
-# Thanks
+## Thanks
 
 I'd like to conclude by thanking you for reading this! I don't advertise my writing because I want this blog to be an authentic space free from expectations, where I can play with ways to make more meaningful and useful content. I also intentionally do not track engagement, so I really don't know how many of you are on here. You came here because you wanted to, and that means a lot to me. But it continues to amaze me whenever people reach out to say that they read something and found it eye-opening, I'm honored that something somewhere on this blog is of use to you!
+
+---
