--- a/pages/blog/2022-12-29-wrapped.mdx
+++ b/pages/blog/2022-12-29-wrapped.mdx
@@ -11,7 +11,7 @@ export const metadata = {
 
 This post will a play-by-play summary of the past year and my goals for next year. My actual thinking thoughts for the year are [here](/blog/2022-12-29-reflection).
 
-### The highlights
+## The highlights
 
 Here's a wrap of my year:
 - went to [CES](https://youtu.be/C3-SXYTrm2k) and saw great innovations like a toothbrush that brushes your entire mouth at once
@@ -32,16 +32,93 @@ Here's a wrap of my year:
 <Carousel autoplay dotPosition="top">
   <Card
     cover={
-      <img alt="example" src="/images/2021-12-31-reflection/quarantine.jpg" />
+      <img alt="Photo of Emma and I at CES" src="/images/2022-12-29-wrapped/ces.jpg" />
     }
   >
-    <Card.Meta description="My mandatory hotel quarantine in Taipei. By the end I actually kind of didn't want to leave. It was so cozy like a womb." />
+    <Card.Meta description="Had a crazy fun weekend @ CES. Couldn't believe I was posing in front of the iconic convention center!" />
+  </Card>
+  <Card
+    cover={
+      <img alt="ATV gang in Puerto Vallarta" src="/images/2022-12-29-wrapped/atv.jpg" />
+    }
+  >
+    <Card.Meta description="My first ATV trip was awesome - kicked up lots of dust and also the patience of my friends when I got lost" />
+  </Card>
+  <Card
+    cover={
+      <img alt="Reenactment of Creation of Adam in Cancun" src="/images/2022-12-29-wrapped/cancun.jpg" />
+    }
+  >
+    <Card.Meta description="Creation of Adam, oil on canvas, circa 2022AD, Cancun, Mexico. Spent week with my amazing SE24 homies at a resort." />
+  </Card>
+  <Card
+    cover={
+      <img alt="Me in theatre with banana" src="/images/2022-12-29-wrapped/banana.jpg" />
+    }
+  >
+    <Card.Meta description="It was mandatory to watch the Minions movie - it was really funny when I turned around and handed bananas to the people sitting behind us" />
+  </Card>
+  <Card
+    cover={
+      <img alt="Me painting the sidewalk" src="/images/2022-12-29-wrapped/painting.jpg" />
+    }
+  >
+    <Card.Meta description="Took my first arts course in college, and made a cardboard sculpture that looked like a paint brush" />
+  </Card>
+  <Card
+    cover={
+      <img alt="A group of people reading under a tree" src="/images/2022-12-29-wrapped/socratica.jpg" />
+    }
+  >
+    <Card.Meta description="One of my efforts to invirogate campus culture was to start reading circles on the grass" />
+  </Card>
+  <Card
+    cover={
+      <img alt="Me with an EEG headset on me" src="/images/2022-12-29-wrapped/eeg.jpg" />
+    }
+  >
+    <Card.Meta description="Acted as experiment monkey for the first time - got an EEG clamped on my head for $20" />
+  </Card>
+  <Card
+    cover={
+      <img alt="Me in exam room" src="/images/2022-12-29-wrapped/exam.jpg" />
+    }
+  >
+    <Card.Meta description="Walking out of my first in-person exam in two years" />
+  </Card>
+  <Card
+    cover={
+      <img alt="Me with Andrew Ng" src="/images/2022-12-29-wrapped/andrew.jpg" />
+    }
+  >
+    <Card.Meta description="The man, the myth, the legend! Got to hang out with the non-2D version of Andrew Ng" />
+  </Card>
+  <Card
+    cover={
+      <img alt="Order confirmation screen of replacement screws to Joe Biden" src="/images/2022-12-29-wrapped/biden.jpg" />
+    }
+  >
+    <Card.Meta description="My boy Joe Biden, please do check your mail. I spent $9 mailing TWO blue replacement screws addressed to you at the White House" />
+  </Card>
+  <Card
+    cover={
+      <img alt="My family and I in the Hall of Mirrors" src="/images/2022-12-29-wrapped/versailles.jpg" />
+    }
+  >
+    <Card.Meta description="The first real trip with my parents - they loved the Hall of Mirrors in the Palace of Versailles. We need to cherish our time and do more!" />
+  </Card>
+  <Card
+    cover={
+      <img alt="Painting session at Fey" src="/images/2022-12-29-wrapped/fey.jpg" />
+    }
+  >
+    <Card.Meta description="A painting session with my lovely friends at Feytopia. I'll see you again, Joigny!" />
   </Card>
 </Carousel>
 
 <br/>
 
-### How did I do
+## How did I do
 
 [Last year](/blog/2021-12-31-reflection), I made a point of setting resolutions that are measurable by [consistency](/blog/2021-06-16-slope) rather than outcome. I think that worked out pretty well; I didn't feel overwhelmed, and have been suprised by my progress:
 
@@ -52,13 +129,12 @@ Here's a wrap of my year:
 4. Build an intimate group of friends @ Waterloo: Found a bunch of homies in SE25, in a few different groups!
 
 
-### 2023 goals
+## 2023 goals
 
 The theme for this year is balance and focus. My readings, reflections and my trusty therapist are confirming my realization from last year: that in my persuit of the things I care about I have blindsighted myself to the other equally important aspects of life. It's a balance of spending the right amount of energy on the right things.
 
 > He is happy who lives in accordance with complete virtue and is sufficiently equipped with external goods, not for some chance period but throughout a complete life.
-
-Aristotle, Nicomachean Ethics
+_Aristotle, Nicomachean Ethics_
 
 Some habitual goals:
 1. Do some intense physical activity every day. Even for 5 minutes!
@@ -72,3 +148,5 @@ I'd also like to do this a bit more often: intentionally lock eyes with someone.
 I realize I have a bad habit of projecting my fears of social interaction on others. I worry that I am a nuisance or bothering a stranger, which changes my demeanor and thus gurantees a bad interaction or an unenjoyable and stressful one for me. I'd like to stop sabotaging myself this way.
 
 2022 has been an amazing year of change and reflection. Let's continue this journey in 2023!
+
+---
