fixing broken images

--- a/pages/blog/2020-01-06-takeaways.mdx
+++ b/pages/blog/2020-01-06-takeaways.mdx
@@ -20,7 +20,7 @@ Before classes started, I attended Orientation Week (Frosh Week). Faculties host
 
 If spending most of your time doing team building activities like scavenger hunts is not your cup of tea, that’s completely understandable. But keep in mind that this event is one of the best ways to make some friends with people outside your program. SE is a cohort based program, so all your classes are with SE students. I took the effort to really get to know the people in my team, and I often bump into them on campus. I think it’s important to not limit your social circles to the people you meet in high school and SE.
 
-![Orientation Pic](https://lh3.googleusercontent.com/AiWA8jPwDypEfQ99JcDIJTHdBVAhz4de_oaaifUcv8Y0mX6f7sbXU6Cp98zP2NtPH8I40fjdXED76WIdZwI70Rh8w31SMSqJq1YTui5H5-_TSfM430cea0aIW-UeyYoVKhG-5NiCSbJplTWQGMhwsnbFuNc2oiJMcYUhTH7Z58QW4frKsgahdQoCP68ASjW09siTelRRkgO0n1wCQHxDNjdQRgdG8ZwAQxUcE1YhmWbYkllPG-b-Q_f8o7nTCGmU4hdo8ijEDfk816y8EebFiBwg_yM7LaUa6cAj2l5_UXeD3GPhoXk9sQu-UyUTS24sjznbYFiHibvOpwVhVtK_R0iJAjPJZ7whvRqSohLjay1ITdx4gEU-8lbXUOHxLrpkAGQ7kJa2ncp6ej4aWbCup6Y884vt6ZQmJd0H942mjqhe8WnjaCoB3Y_WWdHEuJCK17ZXEngICDW9kjJqvunu40fv1ASCZW-FfF23FYnJDE-s1mTaDggNlFNbPSp5knoMNQbSrRg0VYspriQkfiRZIBZBJLeTWr1rqRtO8HGh9xtZMOzIHIyFWbEpbqOVy7ru2VUfRS3NoQCR9sF0DQndKe8ova7q6FJMrqpC8nIN0RrQW60HrPXxo58_X0bD6oa-UaDZFg1IKiNu3QBUChJjWpijDeKzevHbOIUDZmfq_shRcDHrIv7dyhW1IfTlOA=w1292-h969-no?authuser=0)  
+![Orientation Pic](/images/2020-01-06-takeaways/orientation.jpg)  
 _TLDR: Go to orientation week. It’s worth the new friends you’ll make there._
 
 ## Academics
@@ -56,7 +56,7 @@ Overall, I found the culture within the cohort to be very positive overall. I do
 
 I’m very happy with my first term in SE. There’s a common saying in the program that you will consider switching to CS sooner or later. As for how my first term went, I don’t think that statement applies to me yet.
 
-![Winter Pic](https://lh3.googleusercontent.com/_uuksMIsRXTNtOzkSwG5mtbNYYiuHt4V12vArM3NtCgFMrcnaCrsYEJh3jKnlIQaswJzg9EO4tNf5xDxfpfoEFq-BjaNJx3RY2nlub4JYnoM0uhd_N4Lo-EafGcDT0QP6844HfyY_p7Ga9dcAJkWrW9-cl3ZBKWR3cKq1EzkTgU0EA2jCY30PdI6h9UKLsD8zce1TnP5LJ85P__vIFQcjn7VbL_jCeH392k8uZdwhfmW168JViqs8rh1plnVyZYQX7b_zAoNEiKVguiRKOS68umJoBiqvnmI_L0pp033g6pu4tObX3gBCXBneWVBTQMLld5nAIfjzNzvvQATKh2-HRbYlsC-yt0_6mxb_N4w2S_H2DjlFg3ZTfbJiCJvVKqNuh8AZ6KhWnw3A8ZmRJ_RfD-YB1U5YE3YeCOFmSvY4MwwGmrtTiIRu15XT0JpHEDcZjDkq4nhpTP25OEeLqpIl01yFGH4sucsYcOl2TpG6yw5sxhqiI-FGZ36Bm2Ut_sAl1FAiLR-ZqcvBWL3ecWRVYZGQyj506Vn5S89u63VpKHx4iEe02BpXrJo_1HnY5sJVz93DqzsEMzSeOQbJgrp0aWzd8fkKtiPoHBFA8uh7AJaDkO91FgOGcXRaCKQZ5cpeOqFNR0qJ2FuYUvmvNLrM0ufoAEyenG_g1e8AKNNQeTqKJaLsMwe1nECvBrdLA=w1292-h970-no?authuser=0)
+![Winter Pic](/images/2020-01-06-takeaways/winter.jpg)
 _Winter shots from my room_
 
 If you have any specific questions regarding the application process or the program itself, feel free to reach me on [Twitter](https://twitter.com/jonxuxu).
