fixing github links

--- a/pages/projects/brett.mdx
+++ b/pages/projects/brett.mdx
@@ -152,7 +152,7 @@ This will let the Pi automatically connect to your network, with SSH enabled.
 
 5. On your computer, install an SSH client like [PuTTY](https://www.putty.org/). On your computer, connect to the Pi via SSH by setting the target IP to **raspberrypi.local**, with the target port set to **20**. Once connected, you will be prompted to login. Enter **pi** as the username, and **raspberry** as the password.
 
-6. Next, on your computer, git clone the project code at https://github.com/JonathanXu1/BRETT. Using an FTP client like [Filezilla](https://filezilla-project.org/), connect to the Raspberry Pi, and move the capture.py from the /camera folder on the repsitory to the Documents folder on the raspberry pi;
+6. Next, on your computer, git clone the project code at https://github.com/jonxuxu/BRETT. Using an FTP client like [Filezilla](https://filezilla-project.org/), connect to the Raspberry Pi, and move the capture.py from the /camera folder on the repsitory to the Documents folder on the raspberry pi;
 
 7. On your SSH terminal to the Pi, run the following:
 
@@ -321,6 +321,6 @@ I hope you found this article insightful. I'll update this article when new feat
 
 # Code
 
-Github: https://github.com/JonathanXu1/BRETT
+Github: https://github.com/jonxuxu/BRETT
 
 ---
