--- a/pages/projects/noisy.mdx
+++ b/pages/projects/noisy.mdx
@@ -38,7 +38,7 @@ My big takeaway from this project is that music generation has now matured to a 
 
 ## Code
 
-Github: https://github.com/JonathanXu1/noisy-bot
+Github: https://github.com/jonxuxu/noisy-bot
 
 ## Promo material
 
